--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,9 @@ html {
   font-family: "Bellefair", "sans-serif", "Noto Sans", "Noto Sans KR";
   color: #666;
 }
-
+.mobile {
+  display: none;
+}
 .header {
   display: flex;
   width: 100%;
@@ -18,12 +20,16 @@ html {
   align-items: center;
   background: url(../img/bg_gnb_gra.png) repeat-x top;
 }
+.header nav {
+  flex-grow: 1;
+}
 .header nav ul {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .header nav ul li {
-  margin-right: 30px;
+  margin-right: 2%;
 }
 .header nav ul li:nth-child(6) {
   margin-top: 3px;
@@ -39,6 +45,7 @@ html {
 .visual {
   position: relative;
   height: 130vh;
+  overflow: hidden;
 }
 .visual-content {
   position: absolute;
@@ -84,11 +91,41 @@ html {
   height: 100%;
   background-attachment: fixed;
 }
+.visual ul li {
+  opacity: 0;
+}
 .visual ul li:nth-child(1) {
   background-image: url(../img/bg_intro1.jpg);
 }
 .visual ul li:nth-child(2) {
   background-image: url(../img/bg_intro2.jpg);
+}
+.visual ul li:nth-child(3) {
+  background-image: url(../img/bg_intro3.jpg);
+}
+.visual ul li.show {
+  animation: show 2s forwards;
+}
+.visual ul li.off {
+  animation: off 3s;
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes off {
+  0% {
+    opacity: 1;
+    transform: rotate(0) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3deg) scale(1.2);
+  }
 }
 .premium {
   max-width: 1200px;
@@ -104,6 +141,9 @@ html {
   color: #876750;
   font-size: 56px;
 }
+.premium-menu {
+  text-align: center;
+}
 .premium-menu::after {
   content: "";
   display: block;
@@ -111,9 +151,10 @@ html {
 }
 .premium-menu li {
   width: 44%;
-  float: left;
+  display: inline-block;
   margin-right: 10%;
   overflow: hidden;
+  vertical-align: top;
 }
 .premium-menu li:nth-child(2n) {
   margin-right: 0;
@@ -174,7 +215,9 @@ html {
 }
 .invest-list li {
   display: inline-block;
+  vertical-align: top;
   width: 30%;
+  height: 350px;
   padding: 45px 35px 0;
   border-radius: 50px;
   margin-right: 20px;
@@ -202,4 +245,108 @@ html {
 }
 .footer p:last-child {
   padding-bottom: 0px;
+}
+@media (min-width: 769px) and (max-width: 900px) {
+  .header a {
+    font-size: 15px;
+  }
+  .header nav ul li {
+    margin-right: 1%;
+  }
+  .invest-list li {
+    vertical-align: top;
+  }
+  .premium-menu li p {
+    font-size: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .mobile {
+    display: block;
+  }
+  .header .nav-open {
+    order: 1;
+  }
+  .header h1 {
+    order: 2;
+    transform: translateX(10px);
+  }
+  .header .tel {
+    order: 3;
+  }
+  .header nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    background: #111;
+    transition: transform 0.5s;
+    transform: translate(-100%, 0);
+  }
+  .header nav.open {
+    transform: translate(0);
+  }
+  .header nav ul {
+    display: block;
+  }
+  .header nav .mobile {
+    text-align: center;
+  }
+  .header .mobile img {
+    max-width: 120px;
+  }
+  .header nav ul .nav-logo {
+    padding: 40px 0 20px;
+  }
+  .header nav ul li a {
+    display: block;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+    font-size: 16px;
+  }
+  .header .nav-open img {
+    max-width: 40px;
+  }
+  .header .nav-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .header .nav-close img {
+    width: 30px;
+    height: 30px;
+  }
+  .visual ul li:nth-child(2) {
+    background-image: url(../img/bg_intro2_m.jpg);
+  }
+  .visual ul li:nth-child(2) {
+    background-image: url(../img/bg_intro3_m.jpg);
+  }
+  .invest {
+    background-image: url(../img/bg_main2_m.jpg);
+  }
+}
+
+@media (max-width: 640px) {
+  .premium-menu li {
+    width: 90%;
+    margin-right: 0;
+  }
+  .invest {
+    height: auto;
+  }
+  .invest-list {
+    padding-bottom: 20px;
+  }
+  .invest-list li {
+    width: 90%;
+    margin: 0 0 20px 0;
+    padding: 20px 20px 30px;
+    max-height: 200px;
+  }
+  .invest-list li:last-child {
+    margin: 0;
+  }
 }
